5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1758_1577.log
== TEST (2019-05-23 10:51:21) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
i=0
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 10:52:12) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
i=0
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- EXECUTION TIME:
0.350973
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
0.0
4.0
9.2
15.599999999999998
23.2
32.0
42.0
53.2
65.6
79.2
94.0
110.0
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
0.0
81.4
172.6
273.6
384.4
505.0
635.4
775.6
925.6
1085.4
1255.0
1434.4
1623.6
1822.6
2031.4
2250.0
2478.4
2716.6000000000004
2964.6000000000004
3222.4
3490.0
3767.4
4054.6000000000004
4351.6
4658.4
4975.0
5301.4
5637.6
5983.6
6339.400000000001
6705.0
7080.400000000001
7465.6
7860.6
8265.400000000001
8680.0
9104.400000000001
9538.6
9982.6
10436.400000000001
10900.0
11373.400000000001
11856.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:13) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
i=0
d=
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- ERROR:
File "XXXX", line 7
    d=
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:18) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
i=0
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:55:29) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
i=0
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:57:15) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
print(v1)
i=0
while(i<size(v1)):
	d=(a*(v1[i])**2)/2 +vo*v1[i]
	print(d)
	i=i+1
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:03:46) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
vd=(a*v1**2)/2 +vo*v1
print(vd)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:04:06) 
-- CODE:
from numpy import *
a=float(input())
vo=float(input())
n=int(input())
v1=arange(n)
vd=(a*v1**2)/2 +vo*v1
print(vd)

-- EXECUTION TIME:
0.588094
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
